<resources>
    <string name="app_name">Aura</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="Aura_of_music">Aura of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="share_btn">Share</string>
    <string name="timer_btn">Timer</string>
    <string name="equalizer_btn">Equalizer</string>
</resources>